[CrOS About Page] Add button that copies build details to clipboard.

This CL adds a copy button that copies the build details comprising of:

* Google Chrome/Chromium version
* Platform version
* Firmware version
* Channel
* ARC status (if enabled)
* ARC Version
* Enterprise Enrolled (managed vs. not managed)
* Developer mode (normal vs dev)

When the button is clicked inside the Additional details subpage of the
About page, the details above are copied to the user's clipboard.

Screenshots:
https://screenshot.googleplex.com/YcNPhuQoTJ2
https://screenshot.googleplex.com/4WpQLFumiAZ

Fixed: 711130
Change-Id: Ia446ce247c1a6bdad52b0c407ffa7ce3f5dc1c26
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1992021
Commit-Queue: Regan Hsu <hsuregan@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#730396}