chrome/browser/ui/webui/settings/about_handler.h
@@ -26,6 +26,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #endif  // defined(OS_CHROMEOS)
 
 namespace base {
+class DictionaryValue;
 class FilePath;
 class ListValue;
 }
@@ -99,6 +100,12 @@ class AboutHandler : public settings::SettingsPageUIHandler,
 
   // Sets the release track version.
   void HandleSetChannel(const base::ListValue* args);
+
+  // Retrieves OS, ARC and firmware versions.
+  void HandleGetVersionInfo(const base::ListValue* args);
+  void OnGetVersionInfoReady(
+      std::string callback_id,
+      std::unique_ptr<base::DictionaryValue> version_info);
 
   // Retrieves combined channel info.
   void HandleGetChannelInfo(const base::ListValue* args);
