chrome/browser/resources/settings/about_page/about_page_browser_proxy.js
@@ -27,6 +27,15 @@ let ChannelInfo;
 
 /**
  * @typedef {{
+ *   arcVersion: string,
+ *   osFirmware: string,
+ *   osVersion: string,
+ * }}
+ */
+let VersionInfo;
+
+/**
+ * @typedef {{
  *   version: (string|undefined),
  *   size: (string|undefined),
  * }}
@@ -199,6 +208,9 @@ cr.define('settings', function() {
     /** @return {!Promise<!ChannelInfo>} */
     getChannelInfo() {}
 
+    /** @return {!Promise<!VersionInfo>} */
+    getVersionInfo() {}
+
     /** @return {!Promise<?RegulatoryInfo>} */
     getRegulatoryInfo() {}
 
@@ -302,6 +314,11 @@ cr.define('settings', function() {
     /** @override */
     getChannelInfo() {
       return cr.sendWithPromise('getChannelInfo');
+    }
+
+    /** @override */
+    getVersionInfo() {
+      return cr.sendWithPromise('getVersionInfo');
     }
 
     /** @override */
